--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-bardapi==0.1.19
+google-generativeai==0.1.0
 matplotlib==3.5.0
 openai==0.27.7
 openpyxl==3.1.2
 protobuf==3.20.3
 python-dotenv==1.0.1
-scikit_learn==1.2.2
+scikit-learn==1.2.2
